[11.23] released ...
* The ~F and ~M tilde escapes did not work for interpolating messages with
  binary attachments anymore since version 11.13 (Bugreport by Tivon Luker).
* The 'kill' command did not operate correctly on 64-bit big-endian machines.

[11.22] released 3/20/05
* In threaded mode, the thread structure is now shown using line-drawing
  characters in the header summary. (This looks best on a UTF-8 terminal.)
* If a message contains both a 'References' and an 'In-Reply-To' header
  field, 'In-Reply-To' is now preferred for threading and the ',' address.
* When a message part of content-type text/anything is written with the
  pipe-type/subtype mechanism, it is now converted to the character encoding
  of the locale (as it was before 11.14 or so).
* When using a hostname with a port number attached with SMTP STARTTLS,
  strip the port number for correct host name verification (Bugreport by
  Gary E. Rafe).

[11.21] released 2/19/05
* When mail is sent using SMTP, 'Bcc:' fields are not passed to the
  server anymore (Bugreport by Matthew Fischer.)
* When replying to a message part for which a 'pipe-type/subtype'
  variable was set, quotes were inserted in the text sent to the pipe
  instead of in the output received from it (since v. 11.14 or so).
* A message that is already marked as answered is not marked again if
  it is replied to and the 'markanswered' variable is set.
* Nail no longer generates an error if renaming a message in a maildir
  folder fails because both the old and the new link have the same name
  (i.e. if the rename operation was superfluous).
* The new 'sendcharsets' variable was incorrectly named 'charsets' in
  nail.rc in the last version. If nail 11.20 was the first version of
  nail you ever installed, you should correct this by hand since the
  file is not overwritten by 'make install'. (Bugreport by Matthew
  Fischer.)
* Mozilla NSS error reports are more detailed now.